Responsive nav across all platforms

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,36 @@ html {
   width: 70%;
 }
 
-nav {
+header nav {
+  text-align: center;
   font-family: 'Sintony', sans-serif;
+}
+
+header nav li {
+  margin-bottom: 1.75em;
+  display: block;
+  width: 100%;
+}
+
+header nav li a {
+  color: #204A94;
+  margin-right: 0;
+  text-decoration: none;
+}
+
+@media only screen and (min-width: 60em) {
+
+  header nav {
+    text-align: left;
+  }
+
+}
+
+@media only screen and (min-width: 25em) {
+
+  header nav ul li {
+    display: inline;
+    margin: 0 1em;
+  }
+
 }
