--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,12 @@ header nav li a {
   color: #204A94;
   margin-right: 0;
   text-decoration: none;
+  transition-timing-function: ease;
+}
+
+header nav li a:hover {
+  border-bottom: 3px solid #E1533C;
+  transition: .25s;
 }
 
 @media only screen and (min-width: 60em) {
