--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,42 @@ header nav li a:hover {
   transition: .25s;
 }
 
+/* BANNER */
+
+/*.overlay {
+  position: absolute;
+  background-color: #000;
+  opacity: .5;
+  overflow: hidden;
+  z-index: 4;
+  width: 100%;
+  height: 400px;
+  max-height: 600px;
+}*/
+
+.banner-wrapper h1 {
+  color: #fff;
+  font-family: 'Sintony', sans-serif;
+  top: 600px;
+  z-index: 5;
+}
+
+.banner-wrapper {
+  /*background-image: url("../images/cat-lady.jpg");*/
+  padding-bottom: 0;
+  max-height: 600px;
+  overflow: hidden;
+}
+
+.banner-wrapper img {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+@media only screen and (min-width: 90em) {
+
+}
+
 @media only screen and (min-width: 60em) {
 
   header nav {
