--- a/css/main.css
+++ b/css/main.css
@@ -39,34 +39,39 @@ header nav li a:hover {
 
 /* BANNER */
 
-/*.overlay {
-  position: absolute;
-  background-color: #000;
-  opacity: .5;
-  overflow: hidden;
-  z-index: 4;
+.banner-container {
   width: 100%;
-  height: 400px;
-  max-height: 600px;
-}*/
+  padding: 300px 0;
+  background-image: url("../images/cat-lady.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  position: relative;
+  background-size: cover;
+}
+
+.banner-container::before {
+  background: rgba(0, 0, 0, 0)
+  -webkit-linear-gradient(top left, rgba(19, 47, 86, .8) 0%, rgba(36, 87, 160, .3) 100%) repeat;
+  content: "";
+  position: absolute;
+  display: block;
+  height: 100%;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
 
 .banner-wrapper h1 {
+  margin-top: 2em;
   color: #fff;
   font-family: 'Sintony', sans-serif;
-  top: 600px;
-  z-index: 5;
+  text-shadow: 0 0 8px #000;
 }
 
-.banner-wrapper {
-  /*background-image: url("../images/cat-lady.jpg");*/
-  padding-bottom: 0;
-  max-height: 600px;
-  overflow: hidden;
-}
-
-.banner-wrapper img {
-  top: 50%;
-  transform: translateY(-50%);
+.banner-wrapper p {
+  margin-top: 6em;
+  color: #fff;
+  text-shadow: 0 0 8px #000;
 }
 
 @media only screen and (min-width: 90em) {
