--- a/css/main.css
+++ b/css/main.css
@@ -83,17 +83,22 @@ header nav li a:hover {
   background-image: url("../images/dog-blanket.jpg");
 }
 
+.banner-rescue {
+  background-image: url("../images/goat-eating.jpg");
+}
+
 .banner-wrapper h1 {
-  margin-top: 1em;
+  margin-top: .5em;
   color: #fff;
   font-family: 'Sintony', sans-serif;
   text-shadow: 0 0 8px #000;
 }
 
 .banner-wrapper p {
-  margin-top: 4em;
+  margin-top: 3.5em;
   color: #fff;
   text-shadow: 0 0 8px #000;
+  max-width: 38em;
 }
 
 .main-ol {
@@ -148,7 +153,7 @@ footer a {
 
   .banner-container p,
   .banner-container h1 {
-    padding-left: 6%;
+    padding-left: 90px;
   }
 
 }
