--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,19 @@ footer a {
   height: 8em;
 }
 
+.btn {
+  background: rgba(0, 0, 0, 0)
+  -webkit-linear-gradient(top, rgba(225, 83, 60, 1) 20%, rgba(148, 42, 25, 1) 100%) repeat;
+  border: none;
+  color: #fff;
+}
+
+.btn:hover {
+  background: rgba(0, 0, 0, 0)
+  -webkit-linear-gradient(top, rgba(148, 42, 25, 1) 20%, rgba(148, 42, 25, 1) 100%) repeat;
+  color: #fff;
+}
+
 @media only screen and (min-width: 60em) {
 
   header nav {
