--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ header nav li a:hover {
   background-size: cover;
 }
 
-.banner-container::before{
+.banner-container:before{
   background: rgba(0, 0, 0, 0)
   -webkit-linear-gradient(top left, rgba(19, 47, 86, .8) 0%, rgba(36, 87, 160, .3) 100%) repeat;
   content: "";
@@ -139,15 +139,15 @@ footer a {
 }
 
 .btn {
-  background: rgba(0, 0, 0, 0)
-  -webkit-linear-gradient(top, rgba(225, 83, 60, 1) 20%, rgba(148, 42, 25, 1) 100%) repeat;
+  background:
+  rgba(0, 0, 0, 0)-webkit-linear-gradient(top, rgba(225, 83, 60, 1) 20%, rgba(148, 42, 25, 1) 100%) repeat;
   border: none;
   color: #fff;
 }
 
 .btn:hover {
-  background: rgba(0, 0, 0, 0)
-  -webkit-linear-gradient(top, rgba(148, 42, 25, 1) 20%, rgba(148, 42, 25, 1) 100%) repeat;
+  background:
+  rgba(0, 0, 0, 0)-webkit-linear-gradient(top, rgba(148, 42, 25, 1) 20%, rgba(148, 42, 25, 1) 100%) repeat;
   color: #fff;
 }
 
