--- a/css/main.css
+++ b/css/main.css
@@ -28,9 +28,18 @@ html {
   width: 70%;
 }
 
+footer {
+  background-color: #942a19;
+  color: #fff;
+}
+
+footer a {
+  color: #fff;
+}
+
 header nav {
   text-align: center;
-  font-family: "Sintony", sans-serif;
+  font-family: Sintony, sans-serif;
 }
 
 header nav li {
@@ -49,6 +58,7 @@ header nav li a {
 header nav li a:hover {
   border-bottom: 3px solid #e1533c;
   transition: .25s;
+  background-color: #f2f1ed;
 }
 
 /* BANNER */
@@ -63,9 +73,8 @@ header nav li a:hover {
   background-size: cover;
 }
 
-.banner-container:before{
-  background:
-  rgba(0, 0, 0, 0) -webkit-linear-gradient(top left, rgba(19, 47, 86, .8) 0%, rgba(36, 87, 160, .3) 100%) repeat;
+.banner-container::before {
+  background: rgba(0, 0, 0, 0) -webkit-linear-gradient(top left, rgba(19, 47, 86, .8) 0%, rgba(36, 87, 160, .3) 100%) repeat;
   content: "";
   position: absolute;
   display: block;
@@ -90,7 +99,7 @@ header nav li a:hover {
 .banner-wrapper h1 {
   margin-top: .5em;
   color: #fff;
-  font-family: "Sintony", sans-serif;
+  font-family: Sintony, sans-serif;
   text-shadow: 0 0 8px #000;
 }
 
@@ -111,15 +120,6 @@ header nav li a:hover {
   height: 270px;
 }
 
-footer {
-  background-color: #942a19;
-  color: #fff;
-}
-
-footer a {
-  color: #fff;
-}
-
 .connect {
   border-left: none;
   border-top: 1px solid #fff;
@@ -129,15 +129,13 @@ footer a {
 }
 
 .btn {
-  background:
-  rgba(0, 0, 0, 0) -webkit-linear-gradient(top, rgba(225, 83, 60, 1) 20%, rgba(148, 42, 25, 1) 100%) repeat;
+  background: rgba(0, 0, 0, 0) -webkit-linear-gradient(top, rgba(225, 83, 60, 1) 20%, rgba(148, 42, 25, 1) 100%) repeat;
   border: none;
   color: #fff;
 }
 
 .btn:hover {
-  background:
-  rgba(0, 0, 0, 0) -webkit-linear-gradient(top, rgba(148, 42, 25, 1) 20%, rgba(148, 42, 25, 1) 100%) repeat;
+  background: rgba(0, 0, 0, 0) -webkit-linear-gradient(top, rgba(148, 42, 25, 1) 20%, rgba(148, 42, 25, 1) 100%) repeat;
   color: #fff;
 }
 
@@ -193,4 +191,5 @@ footer a {
     display: inline;
     padding: 0 1em;
   }
+
 }
