--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,8 @@ header nav li a:hover {
 }
 
 .btn:hover {
-  background: rgba(0, 0, 0, 0) -webkit-linear-gradient(top, rgba(148, 42, 25, 1) 20%, rgba(148, 42, 25, 1) 100%) repeat;
+  background: none;
+  background-color: #942a19;
   color: #fff;
 }
 
