--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,20 @@ header nav li a:hover {
   color: #fff;
 }
 
+fieldset {
+  border: 0;
+}
+
+form {
+  background-color: #fff;
+}
+
+form input,
+form select {
+  border: 2px solid #ccc;
+  border-radius: 8px;
+}
+
 @media only screen and (min-width: 60em) {
 
   header nav {
