--- a/css/main.css
+++ b/css/main.css
@@ -101,14 +101,13 @@ header nav li a:hover {
 }
 
 .banner-wrapper h1 {
-  margin-top: .5em;
   color: #fff;
   font-family: Sintony, sans-serif;
   text-shadow: 0 0 8px #000;
 }
 
 .banner-wrapper p {
-  margin-top: 3.5em;
+  margin-top: 4em;
   color: #fff;
   text-shadow: 0 0 8px #000;
   max-width: 38em;
@@ -167,7 +166,18 @@ form {
 }
 
 form input,
-form select {
+form select,
+form textarea {
+  border: 2px solid #ccc;
+  border-radius: 8px;
+}
+
+input[type=radio] + label:before {
+  border: 2px solid #ccc;
+}
+
+
+input[type=checkbox] + label:before {
   border: 2px solid #ccc;
   border-radius: 8px;
 }
@@ -214,6 +224,10 @@ form select {
 
   .banner-container {
     margin-bottom: 1em;
+  }
+
+  .banner-wrapper p {
+    margin-top: 3em;
   }
 
   .icons-container img {
